2021-06-05  Michael Herstine  <sp1ff@pobox.com>

	Fix issue #10.
	This commit adds an optional parameter to
	`elfeed-score-scoring-set-score-on-entry`: `sticky`. If the caller
	sets this to true an additional bit of metadata will be set on the
	entry indicating that this score should not be changed by
	subsequent invocations unless the `sticky` parameter is also set.

	`elfeed-score-set-score` is the only function to specify the
	`sticky` flag. In this way, scores that are set manually will
	"stick": while scores set through the new entry hook or as part of
	scoring an entire search will not overwrite them.

	Since this is a new feature, I've put it behind a configuration
	option `elfeed-score-scoring-manual-is-sticky` which defaults
	to true, but if the user dislikes this they can set it to nil to
	disable the feature.

2021-04-29  Michael Herstine  <sp1ff@pobox.com>

	Fix issue #14.
	Embarrasingly, I forgot to update 'elfeed-score-serde-link-rules'
	in 'elfeed-score-serde-load-score-file'-- fixed. Thanks to
	@jpowellrussell for pointing it out.

2021-03-02  Michael Herstine  <sp1ff@pobox.com>

	Upgrade the score file on initial load.
	This commit causes elfeed-score to immediately re-write the
	score file in the current format version when it is asked to
	load a score file in an archaic version.

2021-03-01  Michael Herstine  <sp1ff@pobox.com>

	Re-factor 'elfeed-score-scoring.el' to define the logic for title, content, authors & link rules via macro rather than individually.

2021-03-01  Michael Herstine  <sp1ff@pobox.com>

	Address issue #11.
	This commit introduces a new rule type: link. Link scoring rules
	will operate against the entry link (thanks for the suggestion
	TheLugal).

	Additionally, this commit raises the format version to 7.

2021-02-28  Michael Herstine  <sp1ff@pobox.com>

	Fix issue #12.
	Announce the fact when making a backup copy of the score file.
	If there is an error on copy, say so & continue (i.e. don't
	error out).
