@@ -77,7 +77,7 @@ for (format width alignment).  Possible alignments are :left and
 (define-obsolete-function-alias 'elfeed-score/set-score
   #'elfeed-score-set-score "0.2.0" "Move to standard-compliant naming.")
 
-(defun elfeed-score-set-score (&optional score ignore-region)
+(defun elfeed-score-set-score (score &optional ignore-region)
   "Set the score of one or more Elfeed entries to SCORE.
 
 Their scores will be set to `elfeed-score-default-score' by
@@ -100,8 +100,10 @@ region's state."
     (dolist (entry entries)
       (elfeed-score-log 'info "entry %s ('%s') was directly set to %d"
                         (elfeed-entry-id entry ) (elfeed-entry-title entry) score)
-      ;; Make this score sticky
-      (elfeed-score-scoring-set-score-on-entry entry score t))))
+      ;; Set the score, marking it as "sticky"...
+      (elfeed-score-scoring-set-score-on-entry entry score t)
+      ;; & update the entry.
+      (elfeed-search-update-entry entry))))
 
 (define-obsolete-function-alias 'elfeed-score/get-score
   #'elfeed-score-get-score "0.2.0" "Move to standard-compliant naming.")
@@ -182,9 +184,7 @@ region is not active, only the entry under point will be scored."
 
   (let ((entries (elfeed-search-selected ignore-region)))
     (dolist (entry entries)
-      (let ((score (elfeed-score-scoring-score-entry entry)))
-        (elfeed-score-log 'info "entry %s('%s') has been given a score of %d"
-                          (elfeed-entry-id entry) (elfeed-entry-title entry) score)))
+      (elfeed-score-scoring-score-entry entry))
     (if elfeed-score-serde-score-file
        (elfeed-score-serde-write-score-file elfeed-score-serde-score-file))
     (elfeed-search-update t)))
@@ -198,9 +198,7 @@ region is not active, only the entry under point will be scored."
   (interactive)
 
   (dolist (entry elfeed-search-entries)
-    (let ((score (elfeed-score-scoring-score-entry entry)))
-      (elfeed-score-log 'info "entry %s('%s') has been given a score of %d"
-                        (elfeed-entry-id entry) (elfeed-entry-title entry) score)))
+    (elfeed-score-scoring-score-entry entry))
   (if elfeed-score-serde-score-file
 	    (elfeed-score-serde-write-score-file elfeed-score-serde-score-file))
   (elfeed-search-update t))
